--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1221,7 +1221,6 @@ a.newer-posts:hover {
   position: relative;
   padding: 0;
   margin: 0;
-  max-height: 500px;
   background-color: #fafafa;
   overflow: hidden;
 }
@@ -1245,7 +1244,8 @@ a.newer-posts:hover {
 
 .page-cover-image .page-image {
   width: 100%;
-  height: 100%;
+  height: 270px;
+  object-fit: cover;
 }
 
 .page-footer {
